# lightning-filter

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker.sh  run_docker.sh  run_tests.sh  tests.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci-docker.yml  ci-format.yml  ci.yml  docker-build.yml  docker-image.yml  native-build.yml  nightly-ci.yml  tests.yml
docs/: Config.md  DPDK.md  Features.md  Functionalities.md  IP LF.md  Installation.md  Metrics.md  Parameters.md  Plugins.md  SCION LF.md  SCION.md
docs/control_traffic/: Control_Traffic.md
docs/deployment/: Deployment_SCION.md
docs/implementation/: Code_Quality.md  Keymanager.md  MultiCore.md  Optimizations.md  Ratelimiter.md  Worker.md  drkey_selection.drawio
docs/ipc/: IPC.md
docs/monitoring/: Monitoring.md  gen_telegraf_conf.sh  prometheus.yml  telegraf.conf  telegraf.conf.templ
docs/monitoring/grafana/: db_Rates.json
docs/troubleshooting/: Debug.md  Profiling.md  Troubleshooting.md
src/: .clang-tidy  CMakeLint.cmake  CMakeLists.txt  CMakeOptions.cmake  config.c  config.h  configmanager.c  configmanager.h  distributor.c  distributor.h  drkey.h  drkey_fetcher.h  drkey_fetcher_scion.c  duplicate_filter.c  duplicate_filter.h  keyfetcher.c  keyfetcher.h  keymanager.c  keymanager.h  lf.h  main.c  params.c  params.h  ratelimiter.c  ratelimiter.h  setup.c  setup.h  statistics.c  statistics.h  version.c  version.h  worker.c  worker.h  worker_check.c  worker_ct.c  worker_ct.h  worker_ip.c  worker_scion.c
src/lib/aesni/: CMakeLists.txt  aesni.h  build.sh
src/lib/aesni/test/: aesni_test.c  aesni_test.sh
src/lib/crypto/: README.md  crypto.c  crypto.h
src/lib/crypto/test/: CMakeLists.txt  crypto_drkey_test.c  crypto_hash_test.c  crypto_mac.c  crypto_mac_test.sh
src/lib/hash/: .clang-tidy  murmurhash.c  murmurhash.h
src/lib/ipc/: ipc.c  ipc.h
src/lib/json-parser/: AUTHORS  CMakeLists.txt  LICENSE  json.c  json.h  lf_json_util.h
src/lib/log/: log.h
src/lib/math/: sat_op.h  util.h
src/lib/mirror/: mirror.c  mirror.h
src/lib/ratelimiter/: README.md  timestamp_bucket.h  token_bucket.h
src/lib/ratelimiter/test/: CMakeLists.txt  token_bucket_test.c
src/lib/scion/: scion.c  scion.h
src/lib/scion_drkey/: .gitignore  CMakeLists.txt  README.md  drkey.go  go.mod  go.sum
src/lib/scion_drkey/test/: Makefile  sdrkey_test.c
src/lib/table/: README.md  asdict.c  asdict.h
src/lib/table/test/: Makefile  asdict_test.c
src/lib/telemetry/: counters.h
src/lib/time/: time.h
src/lib/utils/: lf_ip.h  packet.h  parse.h
src/mock/: drkey_fetcher_mock.c  worker_fwd.c
src/plugins/: CMakePlugins.cmake  bypass.c  dst_ratelimiter.c  plugins.c  plugins.h  wg_ratelimiter.c
src/test/: CMakeLists.txt  config_parser_test.c  config_parser_test1.json  duplicate_filter_test.c  keymanager_test.c  keymanager_test1.json  keymanager_test2.json  keymanager_test3.json  log_mock.c  ratelimiter_test.c  ratelimiter_test1.json  rcu_test.c
test/perfnet_ip/: run_lf.sh  run_lf_vdev.sh  vdev_setup.sh
test/perfnet_ip/config/: lf0.json  lf0_p10000.json  lf1.json  lf2.json
test/perfnet_ip/wg/: wg.sh  wg1.conf  wg2.conf
test/perfnet_scion/: README.md  local_vars.sh  run_lf.sh
test/perfnet_scion/config/: lf0.json  lf0_p10000.json  lf_1_ff00_0_111.json
test/testnet_ip/: README.md  integration_test.sh  run_lf.sh  run_single_lf.sh  testnet.sh  testnet_vars.sh
test/testnet_ip/config/: lf1.json  lf1_keys.json  lf1_ratelimits.json  lf2.json
test/testnet_ip/wg/: wg.sh  wg1.conf  wg2.conf
test/testnet_scion/: README.md  integration_test.sh  run_lf.sh  run_single_lf.sh  testnet.sh  testnet6-up.sh
test/testnet_scion/config/: lf_1_ff00_0_111.json  lf_1_ff00_0_112.json
test/testnet_scion/config6/: lf_1_ff00_0_111.json  lf_1_ff00_0_112.json
test/testnet_scion/scion/: gen-topo.sh  scion-topo-add-drkey.py  tiny.topo  tiny4.topo
test/testnet_scion/scion/template/: supervisord.conf
test/testnet_scion/scion/template/ASff00_0_110/: br1-ff00_0_110-1.toml  br1-ff00_0_110-2.toml  cs1-ff00_0_110-1.toml  sd.toml  topology.json
test/testnet_scion/scion/template/ASff00_0_111/: br1-ff00_0_111-1.toml  cs1-ff00_0_111-1.toml  sd.toml  topology.json
test/testnet_scion/scion/template/ASff00_0_112/: br1-ff00_0_112-1.toml  cs1-ff00_0_112-1.toml  sd.toml  topology.json
test/testnet_scion/scion/template/dispatcher/: disp.toml
test/testnet_scion/scion/template6/: supervisord.conf
test/testnet_scion/scion/template6/ASff00_0_110/: br1-ff00_0_110-1.toml  br1-ff00_0_110-2.toml  co1-ff00_0_110-1.toml  cs1-ff00_0_110-1.toml  reservations.json  sd.toml  topology.json
test/testnet_scion/scion/template6/ASff00_0_111/: cs1-ff00_0_111-1.toml  sd.toml
test/testnet_scion/scion/template6/ASff00_0_112/: cs1-ff00_0_112-1.toml
test/testnet_scion/scion/template6_eh/ASff00_0_111/: disp.toml  sd.toml  sig copy.json  sig.toml  topology copy.json  topology.json
test/testnet_scion/scion/template6_eh/ASff00_0_112/: disp.toml  sd.toml  sig copy.json  sig.toml  topology.json
test/testnet_scion/scion/template_eh/ASff00_0_111/: sd.toml
test/testnet_scion/scion/template_eh/ASff00_0_112/: disp.toml  sd.toml
test/testnet_scion/wg/: wg.sh  wg1.conf  wg2.conf
test/testnet_scion2/: run_lf.sh  testnet.sh
test/testnet_scion2/config/: lf_1_ff00_0_111.json  lf_1_ff00_0_112.json
test/testnet_scion2/scion/: .gitignore  tiny4.topo
test/testnet_scion2/scion/supervisor/: supervisor.sh
test/testnet_scion2/scion/template/: ifids.yml  networks.conf  sciond_addresses.json  supervisord.conf
test/testnet_scion2/scion/template/ASff00_0_110/: br1-ff00_0_110-1.toml  br1-ff00_0_110-2.toml  br1-ff00_0_110-3.toml  br1-ff00_0_110-4.toml  cs1-ff00_0_110-1.toml  sd.toml  topology.json
test/testnet_scion2/scion/template/ASff00_0_111/: br1-ff00_0_111-1.toml  br1-ff00_0_111-2.toml  cs1-ff00_0_111-1.toml  sd.toml  topology.json
test/utils/: config_gen.py
usertools/: install_deps.sh  lf-ipc.py  lf-telemetry.py
usertools/dependencies/: env_vars_template
usertools/wireshark/: lf.lua
(+24 files in other folders)
